tests/bad/sizeof_bad_type.oc
/// fail: Could not find type with this name

def main() {
    let x = sizeof(Foo)
}